--- a/GetDataFromBundeswahlleiter0.1.ipynb
+++ b/GetDataFromBundeswahlleiter0.1.ipynb
@@ -15,17 +15,23 @@
     "from requests.exceptions import HTTPError\n",
     "import re\n",
     "import csv\n",
-    "#legend nur für Bundesland 1 Wahlkreis 1 Richtig\n",
+    "\n",
+    "#legend nur für Bundesland 1 Wahlkreis 1 Richtig (ich glaub eigentlich auch da falsch)\n",
     "legend=[\"Bundesland\", \"Wahlkreis\", \"Wahlberechtigte Anzahl\", \"Wähler Anzahl\" , \"Ungültige Anzahl\", \"Gültige Anzahl\", \"CDU Anzahl\", \"SPD Anzahl\", \"Grüne Anzahl\", \"FDP Anzahl\", \"Linke Anzahl\", \"AfD Anzahl\", \"NPD Anzahl\", \"Freie Wähler Anzahl\", \"MLPD Anzahl\", \"BGE Anzahl\", \"ÖDP Anzahl\", \"Die PARTEI Anzahl\", \"EB: KrügerWinands Anzahl\", \"Tierschutzpartei Anzahl\", \"PIRATEN Anzahl\", \"Übrige Anzahl\"]\n",
     "\n",
     "def main():\n",
+    "    #löscht im prinzip nur die data.csv falls schon vorhanden\n",
     "    with open(\"data.csv\", \"w+\") as myfile:\n",
     "        wr = csv.writer(myfile, quoting=csv.QUOTE_ALL)\n",
     "        wr.writerow(legend)\n",
     "    myfile.close()\n",
+    "    \n",
     "    land = 1\n",
     "    wahlkreis = 1\n",
+    "    \n",
+    "    #zählt requests.get\n",
     "    toomany = 0\n",
+    "    \n",
     "    while(wahlkreis<300):\n",
     "        toomany+=1\n",
     "        try:\n",
@@ -367,23 +373,34 @@
    ],
    "source": [
     "def GetData(soup, land, wahlkreis):\n",
+    "    \n",
+    "    #tbody kommt in der HTML Datei der Website 2x vor, deswegen alles doppelt\n",
     "    first_block = soup.find_all('tbody')[0]\n",
     "    second_block = soup.find_all('tbody')[1]\n",
+    "    \n",
+    "    #Spalten der Tabelle\n",
     "    ErststimmenAnzahl = []\n",
     "    ErststimmenProzent = []\n",
     "    ErststimmenDifferenz = []\n",
     "    ZweitstimmenAnzahl = []\n",
     "    ZweitstimmenProzent = []\n",
     "    ZweitstimmenDifferenz = []\n",
+    "    \n",
+    "    #Gehe im ersten Tabellenblock Zeilen durch\n",
     "    for row in first_block.find_all('tr'):\n",
+    "        \n",
+    "        #Die linken drei Spalten haben class colgroup-1 align--right, die rechten 3 Spalten ..-2...\n",
     "        cells1 = row.find_all(class_='colgroup-1 align--right')\n",
     "        cells2 = row.find_all(class_='colgroup-2 align--right')\n",
+    "        \n",
     "        ErststimmenAnzahl.append(cells1[0].find(text=True))\n",
     "        ErststimmenProzent.append(cells1[1].find(text=True))\n",
     "        ErststimmenDifferenz.append(cells1[2].find(text=True))\n",
+    "        \n",
     "        ZweitstimmenAnzahl.append(cells2[0].find(text=True))\n",
     "        ZweitstimmenProzent.append(cells2[1].find(text=True))\n",
-    "        ZweitstimmenDifferenz.append(cells2[2].find(text=True)) \n",
+    "        ZweitstimmenDifferenz.append(cells2[2].find(text=True))\n",
+    "        \n",
     "    #gleiche nochmal für den zweiten block\n",
     "    for row in second_block.find_all('tr'):\n",
     "        cells1 = row.find_all(class_='colgroup-1 align--right')\n",
@@ -394,12 +411,16 @@
     "        ZweitstimmenAnzahl.append(cells2[0].find(text=True))\n",
     "        ZweitstimmenProzent.append(cells2[1].find(text=True))\n",
     "        ZweitstimmenDifferenz.append(cells2[2].find(text=True))\n",
+    "        \n",
+    "    #Weise den Krempel in formatiert den Spalten-Listen zu (absolute Zahlen werden von FormatColumnIntData, Prozentzahlen von FormatColumnFloData)\n",
     "    ErststimmenAnzahl = FormatColumnIntData(ErststimmenAnzahl)\n",
     "    ErststimmenProzent = FormatColumnFloData(ErststimmenProzent)\n",
     "    ErststimmenDifferenz = FormatColumnFloData(ErststimmenDifferenz)\n",
     "    ZweitstimmenAnzahl = FormatColumnIntData(ZweitstimmenAnzahl)\n",
     "    ZweitstimmenProzent = FormatColumnFloData(ZweitstimmenProzent)\n",
     "    ZweitstimmenDifferenz = FormatColumnFloData(ZweitstimmenDifferenz)\n",
+    "    \n",
+    "    #wahlkreisResults ist Liste die dann gleich eine Zeile in der csv- Datei bekommt\n",
     "    wahlkreisResults = []\n",
     "    wahlkreisResults.append(land)\n",
     "    wahlkreisResults.append(wahlkreis)\n",
@@ -407,9 +428,10 @@
     "    AddRowCSV(wahlkreisResults)\n",
     "    return \n",
     "        \n",
-    "#Bekommt Spalte (Liste) wie ErststimmenAnzahl und macht Liste aus INTEGERS \n",
+    "#Bekommt Spalte (Liste) wie ErststimmenAnzahl und macht Liste aus Zahlen   \n",
     "def FormatColumnIntData(column = []):\n",
     "    newcolumn = []\n",
+    "    #extra ein range(len(liste)) für dich zum verschönern :*\n",
     "    for el in range(len(column)):\n",
     "        tempvar = re.findall(r'\\d+.\\d+', column[el])\n",
     "        if tempvar:\n",
@@ -424,7 +446,7 @@
     "def FormatColumnFloData(column = []):\n",
     "    newcolumn = []\n",
     "    for el in range(len(column)):\n",
-    "        #tempvar = re.findall(r'\\d+.\\d+', column[el])\n",
+    "        #-? für negative Vorzeichen\n",
     "        tempvar = re.findall(r'-?\\d+.\\d+', column[el])\n",
     "        if tempvar:\n",
     "            tempvar = tempvar[0]\n",
@@ -434,6 +456,7 @@
     "            newcolumn.append(None)\n",
     "    return newcolumn\n",
     "\n",
+    "#fügt CSV Datei Liste in einer neuen Zeile hinzu\n",
     "def AddRowCSV(mylist = []):\n",
     "    with open(\"data.csv\", 'a') as myfile:\n",
     "        wr = csv.writer(myfile, quoting=csv.QUOTE_ALL)\n",
