new batch of data

--- a/PrepareStrukturdaten.ipynb
+++ b/PrepareStrukturdaten.ipynb
@@ -2658,7 +2658,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "data.to_csv(\"Strukturdaten_2017\")"
+   ]
   }
  ],
  "metadata": {
